# Design_Patterns

Laboration_4/include/: GameFactory.h
Laboration_4/src/: GameFactory.cpp  Lab4.cpp
Laboration_5/: CMakeLists.txt
Laboration_5/include/: Command.h  CommandManager.h  Lab5TestProgram.h  MoveCommand.h  Replay.h  ResetCommand.h  ShowCommand.h
Laboration_5/src/: Command.cpp  CommandManager.cpp  Lab5.cpp  Lab5TestProgram.cpp  MoveCommand.cpp  Replay.cpp  ResetCommand.cpp  ShowCommand.cpp
Laboration_6/: CMakeLists.txt
Laboration_6/include/: BeverageComponent.h  ChocolateComponent.h  CoffeeComponent.h  CreamDecorator.h  EspressoComponent.h  ExtraDecorator.h  Lab6TestProgram.h  MilkDecorator.h  SugarDecorator.h  TeaComponent.h  WhippedCreamDecorator.h
Laboration_6/src/: BeverageComponent.cpp  ChocolateComponent.cpp  CoffeeComponent.cpp  CreamDecorator.cpp  EspressoComponent.cpp  ExtraDecorator.cpp  Lab6.cpp  Lab6TestProgram.cpp  MilkDecorator.cpp  SugarDecorator.cpp  TeaComponent.cpp  WhippedCreamDecorator.cpp
Laboration_7/include/: GameFactory.h
Laboration_7/src/: Game.cpp  GameFactory.cpp  Lab7.cpp
